# fastapi-webhook-service

./: .env.example  .gitignore  API.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REVERT_SUMMARY.md  SQLITE_STATUS.md  TESTING.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  pyproject.toml  quickstart.sh  requirements.txt  test_api.sh  test_webhook.py
app/: __init__.py  config.py  logging_utils.py  main.py  metrics.py  models.py  storage.py
tests/: conftest.py  test_messages.py  test_stats.py  test_webhook.py
